--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+*/node_modules
+*/.pnp
 .pnp.js
 
 # testing
 /coverage
 
 # next.js
-/.next/
+*/.next/
 /out/
 
 # production
@@ -27,14 +27,11 @@ yarn-error.log*
 
 # local env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.production
 
 # vercel
 .vercel
-package-lock.json
 
 # Tmp directory
-/tmp
+*/tmp
