--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /translations/en.json
-    translation: /translations/%two_letters_code%.json
+  - source: /frontend/translations/en.json
+    translation: /frontend/translations/%two_letters_code%.json
