--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,10 @@
 {
     "name": "teste-website",
-    "version": "0.1.0",
+    "version": "2023.07.12-1111",
     "private": true,
     "scripts": {
         "dev": "next dev",
+        "bump": "node bump-version.js",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -31,7 +32,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-map-gl": "^7.1.2",
-        "sharp": "^0.32.1",
+        "sharp": "^0.32.2",
         "swr": "^2.2.0"
     }
 }
