--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,29 +10,29 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@emotion/react": "^11.11.1",
-        "@emotion/server": "^11.11.0",
-        "@mantine/core": "^6.0.17",
-        "@mantine/dates": "^6.0.17",
-        "@mantine/dropzone": "^6.0.17",
-        "@mantine/form": "^6.0.17",
-        "@mantine/hooks": "^6.0.17",
-        "@mantine/modals": "^6.0.17",
-        "@mantine/next": "^6.0.17",
-        "@mantine/notifications": "^6.0.17",
-        "@tabler/icons-react": "^2.30.0",
-        "@turf/turf": "^6.5.0",
-        "dayjs": "^1.11.9",
+        "@emotion/react": "11.11.1",
+        "@emotion/server": "11.11.0",
+        "@mantine/core": "6.0.17",
+        "@mantine/dates": "6.0.17",
+        "@mantine/dropzone": "6.0.17",
+        "@mantine/form": "6.0.17",
+        "@mantine/hooks": "6.0.17",
+        "@mantine/modals": "6.0.17",
+        "@mantine/next": "6.0.17",
+        "@mantine/notifications": "6.0.17",
+        "@tabler/icons-react": "2.30.0",
+        "@turf/turf": "6.5.0",
+        "dayjs": "1.11.9",
         "eslint": "8.46.0",
         "eslint-config-next": "13.4.12",
-        "inflected": "^2.1.0",
-        "maplibre-gl": "^3.2.1",
+        "inflected": "2.1.0",
+        "maplibre-gl": "3.2.1",
         "next": "13.4.12",
-        "next-intl": "^2.19.0",
+        "next-intl": "2.19.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-map-gl": "^7.1.3",
-        "sharp": "^0.32.4",
-        "swr": "^2.2.0"
+        "react-map-gl": "7.1.3",
+        "sharp": "0.32.4",
+        "swr": "2.2.0"
     }
 }
