Maybe fix error

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "teste-website",
-    "version": "2023.08.01-1710",
+    "name": "@carrismetropolitana/website",
+    "version": "2023.08.07-2046",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -12,14 +12,14 @@
     "dependencies": {
         "@emotion/react": "11.11.1",
         "@emotion/server": "11.11.0",
-        "@mantine/core": "6.0.17",
-        "@mantine/dates": "6.0.17",
-        "@mantine/dropzone": "6.0.17",
-        "@mantine/form": "6.0.17",
-        "@mantine/hooks": "6.0.17",
-        "@mantine/modals": "6.0.17",
-        "@mantine/next": "6.0.17",
-        "@mantine/notifications": "6.0.17",
+        "@mantine/core": "6.0.18",
+        "@mantine/dates": "6.0.18",
+        "@mantine/dropzone": "6.0.18",
+        "@mantine/form": "6.0.18",
+        "@mantine/hooks": "6.0.18",
+        "@mantine/modals": "6.0.18",
+        "@mantine/next": "6.0.18",
+        "@mantine/notifications": "6.0.18",
         "@tabler/icons-react": "2.30.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.9",
