--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,32 @@
-# Huge thanks to @ricardojorgerm
+# Massive thank you to @ricardojorgerm
 # for the help in creating this nginx configuration file.
 
+# # #
+# RATE LIMITS
+
+limit_req_zone global zone=global:10m rate=500r/s;
+limit_req_zone $binary_remote_addr zone=ip:10m rate=5r/s;
+limit_req_status 429;
+
+
+# # #
+# CACHE
+
+proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=frontendcache:512m inactive=60m;
+
+
+# # #
+# UPSTREAM
+
+upstream frontend_upstream {
+    zone upstreams 64K;
+    server frontend:3000 max_fails=1 fail_timeout=2s;
+    keepalive 10;
+}
+
+
+# # #
+# HTTP SERVER
 
 server {
 
@@ -19,28 +45,61 @@ server {
 }
 
 
+# # #
+# HTTPS SERVER
+
 server {
 
     listen 443 ssl;
     server_name beta.carrismetropolitana.pt;
     server_tokens off;
 
+    # Lets Encrypt Certificates
     ssl_certificate /etc/letsencrypt/live/beta.carrismetropolitana.pt/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/beta.carrismetropolitana.pt/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    # Set max request size
-    client_max_body_size 50M;
-
-    # Compression configuration
+    # Turn on gZip compression
     gzip on;
     gzip_types application/json;
 
+    # Cache configuration
+    proxy_cache_key "$scheme$request_method$host$request_uri";
+    proxy_cache_valid 200 60m;
+    proxy_cache_valid 404 5m;
+    proxy_cache_lock on;
+    proxy_cache_lock_age 30s; 
+    proxy_cache_lock_timeout 90s;
+    proxy_cache_use_stale error timeout;
+
+    # Printer proxy pass
+    location /printer {
+        proxy_read_timeout 120;
+        proxy_pass http://printer:5050/;
+    }
+
     # Frontend proxy pass
     location / {
-        proxy_read_timeout 120;
-        proxy_pass http://frontend:3000;
+        # Rate limit
+        limit_req zone=global burst=200 delay=2;
+        limit_req zone=ip burst=20 delay=2;
+        # Proxy Cache
+        proxy_cache frontendcache;
+        proxy_cache_revalidate on;
+        # Add headers
+        add_header X-Cache-Status $upstream_cache_status;
+        add_header Cache-Control "public, max-age=3600"; # Cache responses for 3600 seconds
+        add_header Access-Control-Allow-Origin "*";
+        # Proxy Connect
+        proxy_http_version 1.1;
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 20s;
+        proxy_read_timeout 20s;
+        proxy_set_header Connection "";
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://frontend_upstream;
+        proxy_next_upstream error timeout http_500;
     }
 
 }
