Added www alias

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,7 @@ upstream frontend_upstream {
 server {
 
     listen 80;
-    server_name beta.carrismetropolitana.pt;
+    server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -51,12 +51,14 @@ server {
 server {
 
     listen 443 ssl;
-    server_name beta.carrismetropolitana.pt;
+    server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt;
     server_tokens off;
 
     # Lets Encrypt Certificates
     ssl_certificate /etc/letsencrypt/live/beta.carrismetropolitana.pt/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/beta.carrismetropolitana.pt/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/www.beta.carrismetropolitana.pt/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.beta.carrismetropolitana.pt/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -72,12 +74,6 @@ server {
     proxy_cache_lock_age 30s; 
     proxy_cache_lock_timeout 90s;
     proxy_cache_use_stale error timeout;
-
-    # Printer proxy pass
-    location /printer {
-        proxy_read_timeout 120;
-        proxy_pass http://printer:5050/;
-    }
 
     # Frontend proxy pass
     location / {
