--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@carrismetropolitana/website",
-    "version": "2023.09.11-1017",
+    "version": "2023.09.11-1628",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -10,21 +10,13 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@emotion/react": "11.11.1",
-        "@emotion/server": "11.11.0",
-        "@mantine/core": "6.0.20",
-        "@mantine/dates": "6.0.20",
-        "@mantine/dropzone": "6.0.20",
-        "@mantine/form": "6.0.20",
-        "@mantine/hooks": "6.0.20",
-        "@mantine/modals": "6.0.20",
-        "@mantine/next": "6.0.20",
-        "@mantine/notifications": "6.0.20",
+        "@mantine/core": "7.0.0-beta.4",
+        "@mantine/dates": "7.0.0-beta.4",
+        "@mantine/hooks": "7.0.0-beta.4",
+        "@mantine/form": "7.0.0-beta.4",
         "@tabler/icons-react": "2.34.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.9",
-        "eslint": "8.49.0",
-        "eslint-config-next": "13.4.19",
         "inflected": "2.1.0",
         "maplibre-gl": "3.3.1",
         "next": "13.4.19",
@@ -34,5 +26,16 @@
         "react-map-gl": "7.1.5",
         "sharp": "0.32.5",
         "swr": "2.2.2"
+    },
+    "devDependencies": {
+        "@types/node": "20.6.0",
+        "@types/react": "18.2.21",
+        "@types/react-dom": "18.2.7",
+        "eslint": "8.49.0",
+        "eslint-config-next": "13.4.19",
+        "postcss": "8.4.29",
+        "postcss-preset-mantine": "1.7.0",
+        "postcss-simple-vars": "7.0.1",
+        "typescript": "5.2.2"
     }
 }
