Added another domain to server

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,7 @@ upstream frontend_upstream {
 server {
 
     listen 80;
-    server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt;
+    server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -51,7 +51,7 @@ server {
 server {
 
     listen 443 ssl;
-    server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt;
+    server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
     server_tokens off;
 
     # Lets Encrypt Certificates
@@ -59,6 +59,10 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/beta.carrismetropolitana.pt/privkey.pem;
     ssl_certificate /etc/letsencrypt/live/www.beta.carrismetropolitana.pt/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/www.beta.carrismetropolitana.pt/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/on.carrismetropolitana.pt/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/on.carrismetropolitana.pt/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/www.on.carrismetropolitana.pt/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.on.carrismetropolitana.pt/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
