--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@mantine/core": "7.0.0-beta.5",
-        "@mantine/dates": "7.0.0-beta.5",
-        "@mantine/hooks": "7.0.0-beta.5",
-        "@mantine/form": "7.0.0-beta.5",
+        "@mantine/core": "7.0.0",
+        "@mantine/dates": "7.0.0",
+        "@mantine/hooks": "7.0.0",
+        "@mantine/form": "7.0.0",
         "@tabler/icons-react": "2.34.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.9",
@@ -28,7 +28,7 @@
         "swr": "2.2.2"
     },
     "devDependencies": {
-        "@types/node": "20.6.0",
+        "@types/node": "20.6.2",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "eslint": "8.49.0",
