--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -8,6 +8,7 @@
       "@/forms/*": ["forms/*"],
       "@/components/*": ["components/*"],
       "@/hooks/*": ["hooks/*"],
+      "@/contexts/*": ["contexts/*"],
       "@/services/*": ["services/*"],
       "@/schemas/*": ["schemas/*"]
     }
