Adjust nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@
 # RATE LIMITS
 
 limit_req_zone global zone=global:10m rate=500r/s;
-limit_req_zone $binary_remote_addr zone=ip:10m rate=5r/s;
+limit_req_zone $binary_remote_addr zone=ip:10m rate=15r/s;
 limit_req_status 429;
 
 
@@ -51,8 +51,10 @@ server {
 server {
 
     listen 443 ssl;
+    listen [::]:443 ssl;
     server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
     server_tokens off;
+    http2 on;
 
     # Lets Encrypt Certificates
     ssl_certificate /etc/letsencrypt/live/beta.carrismetropolitana.pt/fullchain.pem;
@@ -82,8 +84,8 @@ server {
     # Frontend proxy pass
     location / {
         # Rate limit
-        limit_req zone=global burst=200 delay=2;
-        limit_req zone=ip burst=20 delay=2;
+        limit_req zone=global burst=200 delay=10;
+        limit_req zone=ip burst=50 delay=10;
         # Proxy Cache
         proxy_cache frontendcache;
         proxy_cache_revalidate on;
