Added VERCEL_URL env variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,3 +60,5 @@ services:
       options:
         max-size: '1m'
         max-file: '1'
+    environment:
+      - VERCEL_URL=beta.carrismetropolitana.pt
