--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,107 +1,201 @@
-# Massive thank you to @ricardojorgerm
+# Massive thank you to @ricardojorgerm and @tiagogaspar8
 # for the help in creating this nginx configuration file.
 
-# # #
-# RATE LIMITS
-
-limit_req_zone global zone=global:10m rate=500r/s;
-limit_req_zone $binary_remote_addr zone=ip:10m rate=10r/s;
-limit_req_status 429;
-
 
 # # #
-# CACHE
+# USER
 
-proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=frontendcache:512m inactive=60m;
+user nginx;
 
 
 # # #
-# UPSTREAM
+# WORKER PROCESSES
 
-upstream frontend_upstream {
-    zone upstreams 64K;
-    server frontend:3000 max_fails=1 fail_timeout=2s;
-    keepalive 10;
+worker_processes auto;
+
+
+
+# # #
+# DEFAULTS
+
+error_log /var/log/nginx/error.log notice;
+pid /var/run/nginx.pid;
+
+
+# # #
+# EVENTS
+
+events {
+    use epoll;
+    worker_connections 2048;
 }
 
 
 # # #
-# HTTP SERVER
+# HTTP
 
-server {
+http {
 
-    listen 80;
-    server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
-    server_tokens off;
+    # #
+    # MIME TYPES
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-
-}
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
 
-# # #
-# HTTPS SERVER
+    # #
+    # LOGS
 
-server {
+    log_format main '[$time_iso8601] | IP: $remote_addr | Request: $status [$upstream_cache_status] "$request" | Referer: "$http_referer" | User Agent: "$http_user_agent"';
 
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
-    server_tokens off;
-    http2 on;
+    access_log /var/log/nginx/access.log main;
 
-    # Lets Encrypt Certificates
-    ssl_certificate /etc/letsencrypt/live/beta.carrismetropolitana.pt/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/beta.carrismetropolitana.pt/privkey.pem;
-    ssl_certificate /etc/letsencrypt/live/www.beta.carrismetropolitana.pt/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.beta.carrismetropolitana.pt/privkey.pem;
-    ssl_certificate /etc/letsencrypt/live/on.carrismetropolitana.pt/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/on.carrismetropolitana.pt/privkey.pem;
-    ssl_certificate /etc/letsencrypt/live/www.on.carrismetropolitana.pt/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.on.carrismetropolitana.pt/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    # Turn on gZip compression
+    # #
+    # FILE DESCRIPTOR SETTINGS
+
+    aio on;
+    directio 512;
+    sendfile on;
+    tcp_nopush on;
+
+    keepalive_timeout 65;
+    
+    
+    # # #
+    # RATE LIMITS
+
+    limit_req_zone global zone=global:10m rate=500r/s;
+    limit_req zone=global burst=200 delay=30;
+    
+    limit_req_zone $binary_remote_addr zone=ip:10m rate=10r/s;
+    limit_req zone=ip burst=50 delay=30;
+    
+    limit_req_status 429;
+
+
+    # # #
+    # CACHE
+
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=frontendcache:512m inactive=360m;
+
+
+    # # #
+    # COMPRESSION
+        
     gzip on;
     gzip_types application/json;
 
-    # Cache configuration
-    proxy_cache_key "$scheme$request_method$host$request_uri";
-    proxy_cache_valid 200 60m;
-    proxy_cache_valid 404 5m;
-    proxy_cache_lock on;
-    proxy_cache_lock_age 30s; 
-    proxy_cache_lock_timeout 90s;
-    proxy_cache_use_stale error timeout;
 
-    # Frontend proxy pass
-    location / {
-        # Rate limit
-        limit_req zone=global burst=200 delay=30;
-        limit_req zone=ip burst=50 delay=30;
-        # Proxy Cache
+    # # #
+    # UPSTREAM
+
+    upstream frontend_upstream {
+        zone upstreams 64K;
+        server frontend:3000 max_fails=1 fail_timeout=2s;
+        keepalive 10;
+    }
+
+
+    # # #
+    # DEFAULT HTTP SERVER
+    # Redirect to HTTPS
+
+    server {
+
+        listen 80;
+        listen [::]:80;
+        server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
+        server_tokens off;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+
+    }
+
+
+    # # #
+    # HTTPS SERVER
+
+    server {
+
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
+        server_tokens off;
+        http2 on;
+
+        # Lets Encrypt Certificates
+        ssl_certificate /etc/letsencrypt/live/beta.carrismetropolitana.pt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/beta.carrismetropolitana.pt/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/www.beta.carrismetropolitana.pt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.beta.carrismetropolitana.pt/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/on.carrismetropolitana.pt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/on.carrismetropolitana.pt/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/www.on.carrismetropolitana.pt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.on.carrismetropolitana.pt/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+        ssl_early_data on;
+
+        # Do not skip cache by default
+        set $skip_cache 0;
+        set $skip_reason "";
+
+        # Skip cache if Uptime Monitor
+        include conf.d/uptime.conf;
+
+        # Cache configuration
         proxy_cache frontendcache;
+        proxy_cache_key "$scheme$request_method$host$request_uri";
+        proxy_cache_valid 200 60m;
+        proxy_cache_valid 404 5m;
+        proxy_cache_lock on;
+        proxy_cache_lock_age 30s; 
+        proxy_cache_lock_timeout 90s;
+        proxy_cache_use_stale error timeout updating;
         proxy_cache_revalidate on;
-        # Add headers
-        add_header X-Cache-Status $upstream_cache_status;
-        add_header Cache-Control "public, max-age=3600"; # Cache responses for 3600 seconds
-        add_header Access-Control-Allow-Origin "*";
-        # Proxy Connect
+        proxy_cache_bypass $skip_cache;
+
+        # Proxy configuration
         proxy_http_version 1.1;
         proxy_connect_timeout 10s;
         proxy_send_timeout 20s;
         proxy_read_timeout 20s;
         proxy_set_header Connection "";
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://frontend_upstream;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
         proxy_next_upstream error timeout http_500;
+
+
+        location / {
+            # Add headers
+            add_header Cache-Control "public, max-age=3600"; # Cache responses for 3600 seconds§§
+            add_header X-Cache-Skip $skip_reason;
+            add_header X-Cache-Status $upstream_cache_status;
+            add_header Access-Control-Allow-Origin "*";
+            add_header Strict-Transport-Security "max-age=31536000" always;
+            # Proxy connect
+            proxy_pass http://frontend_upstream;
+        }
+        
+
+        location /version {
+            # Always skip cache
+            proxy_cache_bypass $skip_cache;
+            # Add headers
+            add_header X-Cache-Skip "Is_Version";
+            add_header X-Cache-Status $upstream_cache_status;
+            add_header Access-Control-Allow-Origin "*";
+            add_header Strict-Transport-Security "max-age=31536000" always;
+            # Proxy connect
+            proxy_pass http://frontend_upstream;
+        }
+
     }
 
 }
