--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -188,6 +188,7 @@ http {
             # Always skip cache
             proxy_cache_bypass $skip_cache;
             # Add headers
+            add_header Cache-Control "no-store"; # Do not cache response
             add_header X-Cache-Skip "Is_Version";
             add_header X-Cache-Status $upstream_cache_status;
             add_header Access-Control-Allow-Origin "*";
