--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -186,7 +186,7 @@ http {
 
         location /version {
             # Always skip cache
-            proxy_cache_bypass $skip_cache;
+            proxy_cache_bypass 1;
             # Add headers
             add_header Cache-Control "no-store"; # Do not cache response
             add_header X-Cache-Skip "Is_Version";
