--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@carrismetropolitana/website",
-    "version": "2023.10.03-0342",
+    "version": "2023.10.04-0015",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -14,6 +14,7 @@
         "@mantine/dates": "7.1.2",
         "@mantine/form": "7.1.2",
         "@mantine/hooks": "7.1.2",
+        "@rajesh896/broprint.js": "^2.1.1",
         "@tabler/icons-react": "2.38.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.10",
