--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -89,7 +89,7 @@ http {
     # # #
     # CACHE
 
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=website_cache:512m inactive=360m;
+    proxy_cache_path /var/cache/nginx/website_cache levels=1:2 keys_zone=website_cache:512m inactive=360m;
 
 
     # # #
@@ -207,7 +207,7 @@ http {
     # # #
     # CACHE
 
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=escolas_cache:512m inactive=360m;
+    proxy_cache_path /var/cache/nginx/escolas_cache levels=1:2 keys_zone=escolas_cache:512m inactive=360m;
 
 
     # # #
@@ -304,7 +304,7 @@ http {
     # # #
     # CACHE
 
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=meuhorario_cache:512m inactive=360m;
+    proxy_cache_path /var/cache/nginx/meuhorario_cache levels=1:2 keys_zone=meuhorario_cache:512m inactive=360m;
 
 
     # # #
