Updated with StatusMessage, next-intl@3.0.0

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -7,6 +7,7 @@
       "@/styles/*": ["styles/*"],
       "@/forms/*": ["forms/*"],
       "@/components/*": ["components/*"],
+      "@/translations/*": ["translations/*"],
       "@/hooks/*": ["hooks/*"],
       "@/contexts/*": ["contexts/*"],
       "@/services/*": ["services/*"],
