--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,10 @@
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.10",
         "inflected": "2.1.0",
+        "luxon": "3.4.4",
         "maplibre-gl": "3.6.2",
         "next": "14.0.3",
-        "next-intl": "3.2.2",
+        "next-intl": "3.3.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-map-gl": "7.1.6",
@@ -32,13 +33,13 @@
     },
     "devDependencies": {
         "@types/node": "20.10.3",
-        "@types/react": "18.2.41",
+        "@types/react": "18.2.42",
         "@types/react-dom": "18.2.17",
         "eslint": "8.55.0",
         "eslint-config-next": "14.0.3",
         "postcss": "8.4.32",
         "postcss-preset-mantine": "1.11.1",
         "postcss-simple-vars": "7.0.1",
-        "typescript": "5.3.2"
+        "typescript": "5.3.3"
     }
 }
