--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@mantine/carousel": "^7.3.2",
         "@mantine/core": "7.3.2",
         "@mantine/dates": "7.3.2",
         "@mantine/form": "7.3.2",
@@ -19,6 +20,7 @@
         "@tabler/icons-react": "2.44.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.10",
+        "embla-carousel-react": "^7.1.0",
         "inflected": "2.1.0",
         "luxon": "3.4.4",
         "maplibre-gl": "3.6.2",
