--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -35,7 +35,8 @@
         "react-map-gl": "7.1.7",
         "sharp": "0.33.1",
         "swr": "2.2.4",
-        "ua-parser-js": "1.0.37"
+        "ua-parser-js": "1.0.37",
+        "yup": "^1.3.3"
     },
     "devDependencies": {
         "@types/node": "20.10.5",
