--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -26,6 +26,7 @@
         "luxon": "3.4.4",
         "maplibre-gl": "3.6.2",
         "mongodb": "^6.3.0",
+        "mongoose": "^8.0.3",
         "next": "14.0.4",
         "next-auth": "^5.0.0-beta.4",
         "next-intl": "3.4.0",
@@ -45,7 +46,7 @@
         "eslint": "8.56.0",
         "eslint-config-next": "14.0.4",
         "postcss": "8.4.32",
-        "postcss-preset-mantine": "1.12.1",
+        "postcss-preset-mantine": "1.12.2",
         "postcss-simple-vars": "7.0.1",
         "typescript": "5.3.3"
     }
