--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -10,8 +10,8 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@auth/mongodb-adapter": "^2.0.10",
-        "@mantine/carousel": "^7.3.2",
+        "@auth/mongodb-adapter": "2.0.10",
+        "@mantine/carousel": "7.3.2",
         "@mantine/core": "7.3.2",
         "@mantine/dates": "7.3.2",
         "@mantine/form": "7.3.2",
@@ -21,23 +21,23 @@
         "@tabler/icons-react": "2.44.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.10",
-        "embla-carousel-react": "^7.1.0",
+        "embla-carousel-react": "7.1.0",
         "inflected": "2.1.0",
         "luxon": "3.4.4",
         "maplibre-gl": "3.6.2",
-        "mongodb": "^6.3.0",
-        "mongoose": "^8.0.3",
+        "mongodb": "6.3.0",
+        "mongoose": "8.0.3",
         "next": "14.0.4",
-        "next-auth": "^5.0.0-beta.4",
+        "next-auth": "5.0.0-beta.4",
         "next-intl": "3.4.0",
-        "nodemailer": "^6.9.7",
+        "nodemailer": "6.9.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-map-gl": "7.1.7",
         "sharp": "0.33.1",
         "swr": "2.2.4",
         "ua-parser-js": "1.0.37",
-        "yup": "^1.3.3"
+        "yup": "1.3.3"
     },
     "devDependencies": {
         "@types/node": "20.10.5",
