--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -183,7 +183,7 @@ http {
         }
         
 
-        location /api/version {
+        location /api {
             # Always skip cache
             proxy_cache_bypass 1;
             # Add headers
