--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@carrismetropolitana/website",
-    "version": "2024.01.05-1158",
+    "version": "2024.01.17-1834",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -10,39 +10,41 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@auth/mongodb-adapter": "2.0.10",
-        "@mantine/carousel": "7.4.0",
-        "@mantine/core": "7.4.0",
-        "@mantine/dates": "7.4.0",
-        "@mantine/form": "7.4.0",
-        "@mantine/hooks": "7.4.0",
-        "@mantine/modals": "7.4.0",
+        "@auth/mongodb-adapter": "2.0.13",
+        "@mantine/carousel": "7.4.1",
+        "@mantine/core": "7.4.1",
+        "@mantine/dates": "7.4.1",
+        "@mantine/form": "7.4.1",
+        "@mantine/hooks": "7.4.1",
+        "@mantine/modals": "7.4.1",
+        "@mantine/charts": "7.4.1",
         "@rajesh896/broprint.js": "2.1.1",
-        "@tabler/icons-react": "2.45.0",
+        "@tabler/icons-react": "2.46.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.10",
+        "deck.gl": "^8.9.33",
         "embla-carousel-react": "7.1.0",
         "inflected": "2.1.0",
         "jsonwebtoken": "^9.0.2",
         "luxon": "3.4.4",
         "maplibre-gl": "3.6.2",
         "mongodb": "6.3.0",
-        "mongoose": "8.0.3",
+        "mongoose": "8.1.0",
         "next": "14.0.4",
         "next-auth": "5.0.0-beta.4",
-        "next-intl": "3.4.1",
+        "next-intl": "3.4.4",
         "nodemailer": "6.9.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-map-gl": "7.1.7",
-        "sharp": "0.33.1",
+        "sharp": "0.33.2",
         "swr": "2.2.4",
         "ua-parser-js": "1.0.37",
         "yup": "1.3.3"
     },
     "devDependencies": {
-        "@types/node": "20.10.6",
-        "@types/react": "18.2.46",
+        "@types/node": "20.11.5",
+        "@types/react": "18.2.48",
         "@types/react-dom": "18.2.18",
         "eslint": "8.56.0",
         "eslint-config-next": "14.0.4",
