Pip Survey, fix ENCM

--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@carrismetropolitana/website",
-    "version": "2024.03.18-1659",
+    "version": "2024.03.23-2240",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -22,35 +22,35 @@
         "@tabler/icons-react": "3.1.0",
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.10",
-        "deck.gl": "^8.9.35",
+        "deck.gl": "9.0.1",
         "embla-carousel-react": "8.0.0",
         "inflected": "2.1.0",
-        "jsonwebtoken": "^9.0.2",
+        "jsonwebtoken": "9.0.2",
         "luxon": "3.4.4",
         "maplibre-gl": "3.6.2",
         "mongodb": "6.5.0",
-        "mongoose": "8.2.2",
-        "next": "14.1.3",
+        "mongoose": "8.2.3",
+        "next": "14.1.4",
         "next-auth": "5.0.0-beta.4",
         "next-intl": "3.9.5",
-        "nodemailer": "6.9.12",
+        "nodemailer": "6.9.13",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-map-gl": "7.1.7",
-        "sharp": "0.33.2",
+        "sharp": "0.33.3",
         "swr": "2.2.5",
         "ua-parser-js": "1.0.37",
         "yup": "1.4.0"
     },
     "devDependencies": {
-        "@types/node": "20.11.28",
-        "@types/react": "18.2.67",
+        "@types/node": "20.11.30",
+        "@types/react": "18.2.69",
         "@types/react-dom": "18.2.22",
         "eslint": "8.57.0",
-        "eslint-config-next": "14.1.3",
-        "postcss": "8.4.36",
+        "eslint-config-next": "14.1.4",
+        "postcss": "8.4.38",
         "postcss-preset-mantine": "1.13.0",
         "postcss-simple-vars": "7.0.1",
-        "typescript": "5.4.2"
+        "typescript": "5.4.3"
     }
 }
