--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,6 @@
   "[jsonc]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
-  "editor.renderWhitespace": "boundary"
+  "editor.renderWhitespace": "boundary",
+  "prettier.enable": false
 }
