--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,7 +1,9 @@
-version: '3.9'
+# # #
+
+name: cmetropolitana-website-local
 
 volumes:
-  mongodbdata:
+  # mongodbdata:
 
 services:
   #
@@ -9,17 +11,17 @@ services:
   # # # # # # # # # # # # # # # # # # # # #
   # # # # # # # # # # # # # # # # # # # # #
 
-  mongodb:
-    image: mongo
-    restart: unless-stopped
-    logging:
-      options:
-        max-size: '1m'
-        max-file: '1'
-    ports:
-      - 27017:27017
-    volumes:
-      - mongodbdata:/data/db
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=mongodbuser
-      - MONGO_INITDB_ROOT_PASSWORD=mongodbpassword
+  # mongodb:
+  #   image: mongo
+  #   restart: unless-stopped
+  #   logging:
+  #     options:
+  #       max-size: '1m'
+  #       max-file: '1'
+  #   ports:
+  #     - 27017:27017
+  #   volumes:
+  #     - mongodbdata:/data/db
+  #   environment:
+  #     - MONGO_INITDB_ROOT_USERNAME=mongodbuser
+  #     - MONGO_INITDB_ROOT_PASSWORD=mongodbpassword
