--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -7,17 +7,18 @@
         "bump": "node bump-version.js",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
     },
     "dependencies": {
         "@auth/mongodb-adapter": "3.1.0",
         "@mantine/carousel": "7.10.0",
+        "@mantine/charts": "7.10.0",
         "@mantine/core": "7.10.0",
         "@mantine/dates": "7.10.0",
         "@mantine/form": "7.10.0",
         "@mantine/hooks": "7.10.0",
         "@mantine/modals": "7.10.0",
-        "@mantine/charts": "7.10.0",
         "@rajesh896/broprint.js": "2.1.1",
         "@tabler/icons-react": "3.5.0",
         "@turf/turf": "6.5.0",
@@ -27,7 +28,7 @@
         "inflected": "2.1.0",
         "jsonwebtoken": "9.0.2",
         "luxon": "3.4.4",
-        "maplibre-gl": "3.6.2",
+        "maplibre-gl": "4.3.2",
         "mongodb": "6.6.2",
         "mongoose": "8.4.0",
         "next": "14.2.3",
@@ -40,14 +41,14 @@
         "sharp": "0.33.4",
         "swr": "2.2.5",
         "ua-parser-js": "1.0.38",
-        "yup": "1.4.0"
+        "yup": "1.4.0",
+				"@carrismetropolitana/eslint": "2024.5.282215"
     },
     "devDependencies": {
         "@types/node": "20.12.12",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
-        "eslint": "8.57.0",
-        "eslint-config-next": "14.2.3",
+        "@typescript-eslint/types": "7.11.0",
         "postcss": "8.4.38",
         "postcss-preset-mantine": "1.15.0",
         "postcss-simple-vars": "7.0.1",
