--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,16 +23,16 @@
 
   // Silent the stylistic rules in you IDE, but still auto fix them
   "eslint.rules.customizations": [
-    { "rule": "style/*", "severity": "off" },
-    { "rule": "format/*", "severity": "off" },
-    { "rule": "*-indent", "severity": "off" },
-    { "rule": "*-spacing", "severity": "off" },
-    { "rule": "*-spaces", "severity": "off" },
-    { "rule": "*-order", "severity": "off" },
-    { "rule": "*-dangle", "severity": "off" },
-    { "rule": "*-newline", "severity": "off" },
-    { "rule": "*quotes", "severity": "off" },
-    { "rule": "*semi", "severity": "off" }
+    // { "rule": "style/*", "severity": "off" },
+    // { "rule": "format/*", "severity": "off" },
+    // { "rule": "*-indent", "severity": "off" },
+    // { "rule": "*-spacing", "severity": "off" },
+    // { "rule": "*-spaces", "severity": "off" },
+    // { "rule": "*-order", "severity": "off" },
+    // { "rule": "*-dangle", "severity": "off" },
+    // { "rule": "*-newline", "severity": "off" },
+    // { "rule": "*quotes", "severity": "off" },
+    // { "rule": "*semi", "severity": "off" }
   ],
 
   // Enable eslint for all supported languages
