--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -11,8 +11,8 @@
         "lint:fix": "eslint . --fix && npx stylelint . --fix"
     },
     "dependencies": {
-        "@carrismetropolitana/eslint": "2024.5.1716990602",
-        "@mantine/carousel": "7.10.0",
+        "@carrismetropolitana/eslint": "2024.5.1717005180",
+        "@mantine/carousel": "^7.10.0",
         "@mantine/charts": "7.10.0",
         "@mantine/core": "7.10.0",
         "@mantine/dates": "7.10.0",
@@ -24,7 +24,7 @@
         "@turf/turf": "6.5.0",
         "dayjs": "1.11.11",
         "deck.gl": "9.0.16",
-        "embla-carousel-react": "8.1.3",
+        "embla-carousel-react": "7.1.0",
         "inflected": "2.1.0",
         "jsonwebtoken": "9.0.2",
         "luxon": "3.4.4",
@@ -38,12 +38,13 @@
         "react-dom": "18.3.1",
         "react-map-gl": "7.1.7",
         "sharp": "0.33.4",
+        "swiper": "^11.1.3",
         "swr": "2.2.5",
         "ua-parser-js": "1.0.38",
         "yup": "1.4.0"
     },
     "devDependencies": {
-        "@types/node": "20.12.12",
+        "@types/node": "20.12.13",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
         "postcss": "8.4.38",
