--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ name: cmetropolitana-website
 
 volumes:
   certbotdata:
-  mongodbdata:
 
 services:
   #
@@ -57,41 +56,8 @@ services:
   # # # # # # # # # # # # # # # # # # # # #
   # # # # # # # # # # # # # # # # # # # # #
 
-  mongodb:
-    image: mongo
-    restart: unless-stopped
-    logging:
-      options:
-        max-size: '1m'
-        max-file: '1'
-    ports:
-      - 27017:27017
-    volumes:
-      - mongodbdata:/data/db
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=mongodbuser
-      - MONGO_INITDB_ROOT_PASSWORD=mongodbpassword
-
-  # # # # # # # # # # # # # # # # # # # # #
-  # # # # # # # # # # # # # # # # # # # # #
-
-  backupd:
-    image: ghcr.io/carrismetropolitana/website-backupd:production
-    restart: unless-stopped
-    logging:
-      options:
-        max-size: '1m'
-        max-file: '1'
-    volumes:
-      - ./backups/:/backups
-    env_file:
-      - .env.production
-
-  # # # # # # # # # # # # # # # # # # # # #
-  # # # # # # # # # # # # # # # # # # # # #
-
   website_nextjs:
-    image: ghcr.io/carrismetropolitana/website-nextjs:production
+    image: ghcr.io/carrismetropolitana/website-nextjs:alpha
     restart: unless-stopped
     logging:
       options:
@@ -99,25 +65,3 @@ services:
         max-file: '1'
     env_file:
       - .env.production
-
-  # # # # # # # # # # # # # # # # # # # # #
-  # # # # # # # # # # # # # # # # # # # # #
-
-  escolas_frontend:
-    image: ghcr.io/carrismetropolitana/escolas-frontend:main
-    restart: unless-stopped
-    logging:
-      options:
-        max-size: '1m'
-        max-file: '1'
-
-  # # # # # # # # # # # # # # # # # # # # #
-  # # # # # # # # # # # # # # # # # # # # #
-
-  meuhorario_frontend:
-    image: ghcr.io/carrismetropolitana/folhetos-frontend:main
-    restart: unless-stopped
-    logging:
-      options:
-        max-size: '1m'
-        max-file: '1'
