--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,30 +60,30 @@ http {
     tcp_nopush on;
 
     keepalive_timeout 65;
-    
-    
+
+
     # # #
     # RATE LIMITS
 
     limit_req_zone global zone=global:10m rate=500r/s;
     limit_req zone=global burst=200 delay=30;
-    
+
     limit_req_zone $binary_remote_addr zone=ip:10m rate=10r/s;
     limit_req zone=ip burst=50 delay=30;
-    
+
     limit_req_status 429;
 
 
     # # #
     # COMPRESSION
-        
+
     gzip on;
     gzip_types application/json;
 
 
 
     # # # # # # # # # # # # # # # # # # # # # #
-    # # # WEBSITE (BETA)
+    # # # WEBSITE (ALPHA)
 
 
     # # #
@@ -110,7 +110,7 @@ http {
 
         listen 80;
         listen [::]:80;
-        server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
+        server_name alpha.carrismetropolitana.pt www.alpha.carrismetropolitana.pt;
         server_tokens off;
 
         location /.well-known/acme-challenge/ {
@@ -131,13 +131,13 @@ http {
 
         listen 443 ssl;
         listen [::]:443 ssl;
-        server_name beta.carrismetropolitana.pt www.beta.carrismetropolitana.pt on.carrismetropolitana.pt www.on.carrismetropolitana.pt;
+        server_name alpha.carrismetropolitana.pt www.alpha.carrismetropolitana.pt;
         server_tokens off;
         http2 on;
 
         # Lets Encrypt Certificates
-        ssl_certificate /etc/letsencrypt/live/beta.carrismetropolitana.pt/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/beta.carrismetropolitana.pt/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/alpha.carrismetropolitana.pt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/alpha.carrismetropolitana.pt/privkey.pem;
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
         ssl_early_data on;
@@ -155,7 +155,7 @@ http {
         proxy_cache_valid 200 60m;
         proxy_cache_valid 404 5m;
         proxy_cache_lock on;
-        proxy_cache_lock_age 30s; 
+        proxy_cache_lock_age 30s;
         proxy_cache_lock_timeout 90s;
         proxy_cache_use_stale error timeout updating;
         proxy_cache_revalidate on;
@@ -167,7 +167,7 @@ http {
         proxy_send_timeout 20s;
         proxy_read_timeout 20s;
         proxy_set_header Connection "";
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_next_upstream error timeout http_500;
 
 
@@ -180,214 +180,6 @@ http {
             add_header Strict-Transport-Security "max-age=31536000" always;
             # Proxy connect
             proxy_pass http://website_upstream;
-        }
-        
-
-        location /api {
-            # Always skip cache
-            proxy_cache_bypass 1;
-            # Add headers
-            add_header Cache-Control "no-store"; # Do not cache response
-            add_header X-Cache-Skip "Is_Version";
-            add_header X-Cache-Status $upstream_cache_status;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Strict-Transport-Security "max-age=31536000" always;
-            # Proxy connect
-            proxy_pass http://website_upstream;
-        }
-
-    }
-
-
-
-    # # # # # # # # # # # # # # # # # # # # # #
-    # # # ESCOLAS
-
-
-    # # #
-    # CACHE
-
-    proxy_cache_path /var/cache/nginx/escolas_cache levels=1:2 keys_zone=escolas_cache:512m inactive=360m;
-
-
-    # # #
-    # UPSTREAM
-
-    upstream escolas_upstream {
-        zone upstreams 64K;
-        server escolas_frontend:3000 max_fails=1 fail_timeout=2s;
-        keepalive 10;
-    }
-
-
-    # # #
-    # DEFAULT HTTP SERVER
-    # Redirect to HTTPS
-
-    server {
-
-        listen 80;
-        listen [::]:80;
-        server_name escolas.carrismetropolitana.pt www.escolas.carrismetropolitana.pt;
-        server_tokens off;
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-
-    }
-
-
-    # # #
-    # HTTPS SERVER
-
-    server {
-
-        listen 443 ssl;
-        listen [::]:443 ssl;
-        server_name escolas.carrismetropolitana.pt www.escolas.carrismetropolitana.pt;
-        server_tokens off;
-        http2 on;
-
-        # Lets Encrypt Certificates
-        ssl_certificate /etc/letsencrypt/live/escolas.carrismetropolitana.pt/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/escolas.carrismetropolitana.pt/privkey.pem;
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-        ssl_early_data on;
-
-        # Cache configuration
-        proxy_cache escolas_cache;
-        proxy_cache_key "$scheme$request_method$host$request_uri";
-        proxy_cache_valid 200 60m;
-        proxy_cache_valid 404 5m;
-        proxy_cache_lock on;
-        proxy_cache_lock_age 30s; 
-        proxy_cache_lock_timeout 90s;
-        proxy_cache_use_stale error timeout updating;
-        proxy_cache_revalidate on;
-        proxy_cache_bypass $skip_cache;
-
-        # Proxy configuration
-        proxy_http_version 1.1;
-        proxy_connect_timeout 10s;
-        proxy_send_timeout 20s;
-        proxy_read_timeout 20s;
-        proxy_set_header Connection "";
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
-        proxy_next_upstream error timeout http_500;
-
-
-        location / {
-            # Add headers
-            add_header Cache-Control "public, max-age=3600"; # Cache responses for 3600 seconds§§
-            add_header X-Cache-Skip $skip_reason;
-            add_header X-Cache-Status $upstream_cache_status;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Strict-Transport-Security "max-age=31536000" always;
-            # Proxy connect
-            proxy_pass http://escolas_upstream;
-        }
-
-    }
-
-
-
-    # # # # # # # # # # # # # # # # # # # # # #
-    # # # MEUHORARIO (FOLHETOS)
-
-
-    # # #
-    # CACHE
-
-    proxy_cache_path /var/cache/nginx/meuhorario_cache levels=1:2 keys_zone=meuhorario_cache:512m inactive=360m;
-
-
-    # # #
-    # UPSTREAM
-
-    upstream meuhorario_upstream {
-        zone upstreams 64K;
-        server meuhorario_frontend:3000 max_fails=1 fail_timeout=2s;
-        keepalive 10;
-    }
-
-
-    # # #
-    # DEFAULT HTTP SERVER
-    # Redirect to HTTPS
-
-    server {
-
-        listen 80;
-        listen [::]:80;
-        server_name meuhorario.carrismetropolitana.pt www.meuhorario.carrismetropolitana.pt;
-        server_tokens off;
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-
-    }
-
-
-    # # #
-    # HTTPS SERVER
-
-    server {
-
-        listen 443 ssl;
-        listen [::]:443 ssl;
-        server_name meuhorario.carrismetropolitana.pt www.meuhorario.carrismetropolitana.pt;
-        server_tokens off;
-        http2 on;
-
-        # Lets Encrypt Certificates
-        ssl_certificate /etc/letsencrypt/live/meuhorario.carrismetropolitana.pt/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/meuhorario.carrismetropolitana.pt/privkey.pem;
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-        ssl_early_data on;
-
-        # Cache configuration
-        proxy_cache meuhorario_cache;
-        proxy_cache_key "$scheme$request_method$host$request_uri";
-        proxy_cache_valid 200 60m;
-        proxy_cache_valid 404 5m;
-        proxy_cache_lock on;
-        proxy_cache_lock_age 30s; 
-        proxy_cache_lock_timeout 90s;
-        proxy_cache_use_stale error timeout updating;
-        proxy_cache_revalidate on;
-        proxy_cache_bypass $skip_cache;
-
-        # Proxy configuration
-        proxy_http_version 1.1;
-        proxy_connect_timeout 10s;
-        proxy_send_timeout 20s;
-        proxy_read_timeout 20s;
-        proxy_set_header Connection "";
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
-        proxy_next_upstream error timeout http_500;
-
-
-        location / {
-            # Add headers
-            add_header Cache-Control "public, max-age=3600"; # Cache responses for 3600 seconds§§
-            add_header X-Cache-Skip $skip_reason;
-            add_header X-Cache-Status $upstream_cache_status;
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Strict-Transport-Security "max-age=31536000" always;
-            # Proxy connect
-            proxy_pass http://meuhorario_upstream;
         }
 
     }
