Now with real news

--- a/nextjs/tsconfig.json
+++ b/nextjs/tsconfig.json
@@ -8,6 +8,7 @@
     "paths": {
       "@/authentication/*": ["authentication/*"],
       "@/styles/*": ["styles/*"],
+      "@/utils/*": ["utils/*"],
       "@/forms/*": ["forms/*"],
       "@/components/*": ["components/*"],
       "@/hooks/*": ["hooks/*"],
