--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -83,21 +83,21 @@ http {
 
 
     # # # # # # # # # # # # # # # # # # # # # #
-    # # # WEBSITE (ALPHA)
+    # # # WEBSITE FRONTEND (ALPHA)
 
 
     # # #
     # CACHE
 
-    proxy_cache_path /var/cache/nginx/website_cache levels=1:2 keys_zone=website_cache:512m inactive=360m;
+    proxy_cache_path /var/cache/nginx/website_frontend_cache levels=1:2 keys_zone=website_frontend_cache:512m inactive=360m;
 
 
     # # #
     # UPSTREAM
 
-    upstream website_upstream {
+    upstream website_frontend_upstream {
         zone upstreams 64K;
-        server website_nextjs:3000 max_fails=1 fail_timeout=2s;
+        server website_frontend:3000 max_fails=1 fail_timeout=2s;
         keepalive 10;
     }
 
@@ -150,7 +150,7 @@ http {
         include conf.d/uptime.conf;
 
         # Cache configuration
-        proxy_cache website_cache;
+        proxy_cache website_frontend_cache;
         proxy_cache_key "$scheme$request_method$host$request_uri";
         proxy_cache_valid 200 60m;
         proxy_cache_valid 404 5m;
@@ -179,7 +179,7 @@ http {
             add_header Access-Control-Allow-Origin "*" always;
             add_header Strict-Transport-Security "max-age=31536000" always;
             # Proxy connect
-            proxy_pass http://website_upstream;
+            proxy_pass http://website_frontend_upstream;
         }
 
     }
