New project reorganization

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,18 +6,12 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "paths": {
-      "@/authentication/*": ["authentication/*"],
+			"@/utils/*": ["utils/*"],
       "@/styles/*": ["styles/*"],
-      "@/utils/*": ["utils/*"],
-      "@/forms/*": ["forms/*"],
-      "@/components/*": ["components/*"],
-      "@/hooks/*": ["hooks/*"],
-      "@/helpers/*": ["helpers/*"],
       "@/contexts/*": ["contexts/*"],
-      "@/scripts/*": ["scripts/*"],
-      "@/services/*": ["services/*"],
-      "@/schemas/*": ["schemas/*"],
-      "@/translations/*": ["translations/*"]
+      "@/opengraph/*": ["opengraph/*"],
+			"@/components/*": ["components/*"],
+      "@/translations/*": ["translations/*"],
     },
     "allowJs": true,
     "outDir": "build",
