--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -184,4 +184,108 @@ http {
 
     }
 
+
+
+    # # # # # # # # # # # # # # # # # # # # # #
+    # # # VIDEOWALL (ALPHA)
+
+
+    # # #
+    # CACHE
+
+    proxy_cache_path /var/cache/nginx/website_videowall_cache levels=1:2 keys_zone=website_videowall_cache:512m inactive=360m;
+
+
+    # # #
+    # UPSTREAM
+
+    upstream website_videowall_upstream {
+        zone upstreams 64K;
+        server website_videowall:3000 max_fails=1 fail_timeout=2s;
+        keepalive 10;
+    }
+
+
+    # # #
+    # DEFAULT HTTP SERVER
+    # Redirect to HTTPS
+
+    server {
+
+        listen 80;
+        listen [::]:80;
+        server_name videowall.carrismetropolitana.pt www.videowall.carrismetropolitana.pt;
+        server_tokens off;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+
+    }
+
+
+    # # #
+    # HTTPS SERVER
+
+    server {
+
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name videowall.carrismetropolitana.pt www.videowall.carrismetropolitana.pt;
+        server_tokens off;
+        http2 on;
+
+        # Lets Encrypt Certificates
+        ssl_certificate /etc/letsencrypt/live/videowall.carrismetropolitana.pt/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/videowall.carrismetropolitana.pt/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+        ssl_early_data on;
+
+        # Do not skip cache by default
+        set $skip_cache 0;
+        set $skip_reason "";
+
+        # Cache configuration
+        proxy_cache website_videowall_cache;
+        proxy_cache_key "$scheme$request_method$host$request_uri";
+        proxy_cache_valid 200 60s;
+        proxy_cache_valid 404 5m;
+        proxy_cache_lock on;
+        proxy_cache_lock_age 30s;
+        proxy_cache_lock_timeout 90s;
+        proxy_cache_use_stale error timeout updating;
+        proxy_cache_revalidate on;
+        proxy_cache_bypass $skip_cache;
+
+        # Proxy configuration
+        proxy_http_version 1.1;
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 20s;
+        proxy_read_timeout 20s;
+        proxy_set_header Connection "";
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_next_upstream error timeout http_500;
+
+
+        location / {
+						# Basic Authentication
+						auth_basic "Restricted Content";
+						auth_basic_user_file /etc/nginx/.htpasswd;
+            # Add headers
+            add_header Cache-Control "public, max-age=60"; # Cache responses for 60 seconds§§
+            add_header X-Cache-Skip $skip_reason;
+            add_header X-Cache-Status $upstream_cache_status;
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Strict-Transport-Security "max-age=31536000" always;
+            # Proxy connect
+            proxy_pass http://website_videowall_upstream;
+        }
+
+    }
+
 }
