--- a/videowall/package.json
+++ b/videowall/package.json
@@ -1,17 +1,17 @@
 {
-	"name": "@carrismetropolitana/videowall",
-	"version": "2024.04.07-0415",
-	"private": true,
-	"scripts": {
-		"dev": "next dev -p 3003",
-		"bump": "node bump-version.js",
-		"build": "next build",
+  "name": "@carrismetropolitana/website-videowall",
+  "version": "2024.06.19-1715",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
-	},
-	"dependencies": {
-		"@carrismetropolitana/eslint": "2024.6.1717593318",
-		"@mantine/core": "7.10.2",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix && npx stylelint . --fix"
+  },
+  "dependencies": {
+    "@carrismetropolitana/eslint": "2024.6.1717593318",
+    "@mantine/core": "7.10.2",
     "@mantine/hooks": "7.10.2",
     "@tabler/icons-react": "3.6.0",
     "dotenv": "16.4.5",
@@ -25,9 +25,9 @@
     "sharp": "0.33.4",
     "swr": "2.2.5",
     "tunnel-ssh": "5.1.2"
-	},
-	"devDependencies": {
-		"@types/node": "20.14.5",
+  },
+  "devDependencies": {
+    "@types/node": "20.14.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "typescript": "5.4.5"
