--- a/videowall/tsconfig.json
+++ b/videowall/tsconfig.json
@@ -6,6 +6,9 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "paths": {
+			"crypto": [
+				"node_modules/crypto-js"
+			],
 			"@/utils/*": ["utils/*"],
 			"@/hooks/*": ["hooks/*"],
 			"@/styles/*": ["styles/*"],
