--- a/videowall/package.json
+++ b/videowall/package.json
@@ -35,5 +35,9 @@
     "postcss-preset-mantine": "1.15.0",
     "postcss-simple-vars": "7.0.1",
     "typescript": "5.4.5"
-  }
+  },
+	"browser": {
+		"crypto": false,
+		"cpu-features": false
+	}
 }
